# bakery-store

./: .gitignore  Cargo.toml  config.yaml
docker/: docker-compose.yaml
entity/: Cargo.toml
entity/src/: bakery.rs  event_message.rs  extra.rs  lib.rs  mod.rs  order.rs  order_product.rs  prelude.rs  product.rs  stock.rs
graphql/: Cargo.toml
graphql/src/: main.rs  mutations.rs  queries.rs  server.rs  subscriptions.rs
graphql/src/cli/: mod.rs  start.rs  version.rs
graphql/src/helpers/: date.rs  jwt.rs  mod.rs
graphql/src/ide/: altair.rs
graphql/src/schema/: mod.rs
graphql/src/schema/guards/: auth.rs
graphql/src/schema/inputs/: account.rs  asset.rs  chart_dataset.rs  image.rs  login.rs  memo.rs  mod.rs  notification.rs  relay.rs  transaction.rs  vault.rs
graphql/src/schema/types/: bakery.rs  mod.rs  order.rs  product.rs  stock.rs
graphql/src/schema/validators/: timestamp.rs
indexer/: Cargo.toml
indexer/src/: args.rs  main.rs
indexer/src/cli/: bake.rs  mod.rs
indexer/src/tasks/: bake.rs  mod.rs
lib/: Cargo.toml
lib/src/: crypto.rs  entity.rs  error.rs  lib.rs  serde.rs  time.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240702_165437_event_queue_table.rs
service/: Cargo.toml
service/src/: lib.rs  services.rs
service/src/bakery/: dto.rs  mod.rs  repository.rs  service.rs
service/src/cache/: service.rs
service/src/config/: database.rs  gql.rs  jwt.rs  mod.rs  redis.rs
service/src/event_queue/: repository.rs  service.rs
service/src/message_broker/: service.rs
service/src/order/: dto.rs  mod.rs  repository.rs  service.rs
service/src/order_product/: dto.rs  repository.rs
service/src/product/: dto.rs  mod.rs  repository.rs
service/src/stock/: dto.rs  mod.rs  repository.rs
service/src/store/: service.rs
