[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hex = "0.4.3"
async-graphql = { version = "7.0.6", features = ["chrono", "decimal", "dataloader"] }
dotenv = "0.15.0"
log = "0.4.17"
futures = "0.3.25"
sea-orm = { version = "^0", features = ["postgres-array"] }
clap = { version = "4.5.8", features = ["derive", "color"] }
error-stack = "0.5.0"
serde = "1.0.147"
serde_json = "1.0.91"
buildstructor = "0.5.1"
env_logger = "0.11.3"
colorful = "0.2.2"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
chrono = "0.4.24"
ethers = "2.0.4"
lib = { path = "../lib" }
service = { path = "../service" }
entity = { path = "../entity" }
uuid = { version = "1.3.3", features = ["v4"] }
bigdecimal = { version = "0.4.2", features = ["serde"] }
twitter-v2 = "0.1.8"
redis = { version = "0.25.4", features = ["aio", "connection-manager", "tokio-comp"] }
redis-macros = "0.3.0"
axum = { version = "0.7.5", features = ["macros", "ws"] }
async-graphql-axum = "7.0.6"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tower = "0.4.13"
slug = "0.1.5"
regex = "1.10.2"
rust_decimal = "1.35.0"
tokio-stream = "0.1.15"
