[package]
name = "lib"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.4"
error-stack = "0.3.1"
serde = "1.0.147"
serde_json = "1.0.91"
ethers = "2.0.4"
sea-orm = { version = "^0" }
tokio = { version = "1.33.0", features = ["macros"] }
chrono = "0.4.31"
hex = "0.4.3"
bigdecimal = { version = "0.4.2", features = ["serde"] }
