[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.workspaces]
independent = true

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.80"
buildstructor = "0.5.4"
chrono = "0.4.38"
colorful = "0.2.2"
derive_builder = "0.20.0"
error-stack = "0.4.1"
ethers = "2.0.14"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
lib = { path = "../lib" }
entity = { path = "../entity" }
log = "0.4.22"
redis-macros = "0.3.0"
reqwest-middleware = "0.3.2"
reqwest-retry = "0.6.0"
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_valid = "0.24.0"
serde_with = "3.8.2"
serde_yaml = "0.9.34"
tokio = "1.38.0"
url = "2.5.2"
async-tungstenite = { version = "0.26.2", features = ["async-native-tls", "async-std"] }
teloxide = { version = "0.12", features = ["macros"] }
async-graphql = { version = "7.0.6", features = ["chrono", "decimal"] }
tungstenite = { version = "0.23.0", features = ["native-tls"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serenity = { version = "0.12.2", features = ["framework", "standard_framework", "collector"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
uuid = { version = "1.3.3", features = ["v4"] }
bigdecimal = { version = "0.4.2", features = ["serde"] }
redis = { version = "0.25.4", features = ["aio", "connection-manager", "tokio-comp"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
